Bug: Form Overflow Form overflows from container on chrome when run on windows
Changelog:
-the form no longer grows
-form container fits content
-form content aligns and justifies to flex start

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@
 
 * {
     box-sizing: border-box;
-    display: flex 1,1,auto;
 }
 
 body {
@@ -69,7 +68,9 @@ body {
 
 .form-container{
     display: flex;
-    min-height: auto;
+    min-height: fit-content;
+    justify-content: flex-start;
+    align-items: flex-start; 
     flex: 1;
     background-color: white;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3);
@@ -135,7 +136,7 @@ form{
     padding-bottom: 1rem;
     font-size: 0.8rem;
     box-sizing: border-box;
-    flex: 1;
+    flex: 0 1 auto;
     width: 100%;
   }
 
